[tool.poetry]
name = "dagster-university"
version = "0.1.0"
description = ""
authors = ["Yothin Muangsommuk <yothin.m@linecorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dagster = ">=1.4,<2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
